# npa-gs-source

./: .gitignore  Makefile  README.md  build_app.py  pyproject.toml
NPAGS004/: build_executable.py  pyproject.toml
NPAGS004/data/logs/: station_data.jsonl
NPAGS004/src/npags/: __init__.py  cli.py
NPAGS004/src/npags.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
NPAGS004/src/npags/config/decoder_schemas/: agrinode.yaml
NPAGS004/src/npags/core/: logger.py
NPAGS004/src/npags/decoders/: loader.py
NPAGS004/src/npags/gui/: components.py  editor_view.py  history_dialog.py  styles.py
NPAGS004/src/npags/radio/: __init__.py  flowgraph.py
NPAGS004/tools/: analyze_logs.py  plot_telemetry.py  send_test_packet.py  validate_decoder.py
docs/: MANUAL_USUARIO.md  README_DISTRIBUICAO.md
scripts/: compile_translations.py  install.sh  prepare_release.sh
src/npags/config/decoder_schemas/: agrinode.yaml  agrosat.yaml
src/npags/core/: decoder_engine.py  exceptions.py  field_types.py  logger.py  multi_decoder.py  schema_validator.py  telemetry_formatter.py
src/npags/decoders/: loader.py
src/npags/gui/: __init__.py  canvas_items.py  main_window.py  styles.py  utils.py
src/npags/gui/components/: __init__.py  checkable_combo.py  log_textbox.py  sidebar_params.py
src/npags/gui/dialogs/: __init__.py  alerts_config_dialog.py  export_dialog.py  history_dialog.py  report_dialog.py
src/npags/gui/services/: __init__.py  data_extractor.py  history_service.py
src/npags/gui/translations/: __init__.py  en_US.qm  en_US.ts  npags.pro
src/npags/gui/views/: __init__.py  dashboard_view.py  editor_view.py  station_view.py
src/npags/gui/views/dashboard/: __init__.py  data_manager.py  layout_manager.py
src/npags/gui/widgets/: __init__.py  alerts_widget.py  kpi_widgets.py  map_widget.py  plot_widget.py
src/npags/radio/: __init__.py  backend.py  flowgraph.py  udp_receiver.py
src/npags/reports/: __init__.py  generator.py
tools/: analyze_logs.py  send_test_packet.py  validate_decoder.py
