[project]
name = "npags"
version = "1.0.0"
description = "NPA Ground Station - Estação terrestre para telemetria LoRa/SDR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.20.0",
    "cerberus>=1.3.4",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0",
    # --- DEPENDÊNCIAS ATUALIZADAS ---
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.0",
]

[project.optional-dependencies]
radio = [
    # GNU Radio deve ser instalado via gerenciador de pacotes do sistema
]

[project.scripts]
npags-gui = "npags.gui.main_window:main"
npags-station = "npags.ground_station:main"
npags-radio = "npags.radio.backend:main"
npags-decode = "npags.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# --- CORREÇÃO DO ÍCONE E DADOS ---
[tool.setuptools.package-data]
"npags" = [
    "config/decoder_schemas/*.yaml",
    "gui/assets/*.svg",   # <--- ISSO INCLUI O SEU ÍCONE NA INSTALAÇÃO
    "gui/assets/*.png"    # (Opcional) Caso use PNGs no futuro
]

# --- CONFIGURAÇÃO DO MYPY ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true